added and tailwind css

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     <!-- daisy ui and tailwind css cdn link ends here// -->
 </head>
 <body>
-   
+   <header>
+
+   </header>
+   <main>
+
+   </main>
+   <footer>
+    
+   </footer>
 </body>
 </html>
